unpackaged/main/default/objects/iContactforSF__iContact_Temp_Recipient__c/iContactforSF__iContact_Temp_Recipient__c.object-meta.xml
<CustomObject>
    <description>This is a temporary table to hold recipients of an iContact message.</description>
    <label>iContact Temp Recipient</label>
    <nameField>
        <label>tempRecipient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iContact Temp Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>