unpackaged/main/default/objects/iContactforSF__iContact_Temp_Recipient__c/fields/iContactforSF__ContactId__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__ContactId__c</fullName>
    <label>ContactId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>