unpackaged/main/default/objects/iContactforSF__iContact_Temp_Recipient__c/fields/iContactforSF__Debug__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Debug__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, the associated record is apart of the debug logging for the sending process.</description>
    <label>Debug</label>
    <type>Checkbox</type>
</CustomField>