unpackaged/main/default/objects/iContactforSF__iContact_Temp_Recipient__c/fields/iContactforSF__Debug_Comments__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Debug_Comments__c</fullName>
    <description>The comments associated with the debug log.</description>
    <label>Debug Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>