unpackaged/main/default/objects/iContactforSF__iContact_Temp_Recipient__c/fields/iContactforSF__Email__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Email__c</fullName>
    <description>The email address of the recipient.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>