unpackaged/main/default/objects/iContactforSF__iContact_Temp_Recipient__c/fields/iContactforSF__iContactId__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__iContactId__c</fullName>
    <label>iContactId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>