unpackaged/main/default/objects/iContactforSF__iContact_Temp_Recipient__c/fields/iContactforSF__Key__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Key__c</fullName>
    <description>Campaign + timestamp. Used as a unique key.</description>
    <label>Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>