unpackaged/main/default/objects/iContactforSF__iContact_Temp_Recipient__c/fields/iContactforSF__LeadId__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__LeadId__c</fullName>
    <label>LeadId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>